@@ -68,6 +68,14 @@
       <version>8.0.23</version>
     </dependency>
 
+    <!-- autouzupełnianie combobox -->
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>11.2.0</version>
+    </dependency>
+
+
 
   </dependencies>
 
@@ -82,6 +90,22 @@
           <target>21</target>
         </configuration>
       </plugin>
+      <!-- autouzupełnianie -->
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.2</version> <!-- Zmień wersję na 3.1.2 -->
+        <configuration>
+          <archive>
+            <manifestEntries>
+              <Add-Opens>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</Add-Opens>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+
+
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
@@ -98,6 +122,9 @@
               <noManPages>true</noManPages>
               <stripDebug>true</stripDebug>
               <noHeaderFiles>true</noHeaderFiles>
+              <options>
+                <option>--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+              </options>
             </configuration>
           </execution>
         </executions>
